--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "esw webpack.config.* src buildScripts",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter spec buildScripts/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist" : "node_modules/.bin/rimraf ./dist",
+    "build:html" : "babel-node buildScripts/buildHtml.js",
+    "prebuild" : "npm-run-all clean-dist test lint build:html",
+    "build" : "babel-node buildScripts/build.js",
+    "postbuild" : "babel-node buildScripts/distServer.js"
   },
   "author": "Cory House",
   "license": "MIT",
